Fix asset progress bar not showing sometimes (#1146)

--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -535,11 +535,11 @@
 
 .pcui-asset-panel-task-running, .pcui-asset-panel-task-failed {
     .pcui-spinner {
-        display: inline-block;
+        display: inline-block !important;
     }
 
     .pcui-progress {
-        display: block;
+        display: block !important;
     }
 
     &.pcui-table-row {
